<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity"
    android:textAlignment="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutTextView1"
        android:id="@+id/textViewAbout1"
        android:gravity="center"
        android:fontFamily="@string/fontFamily__roboto_black"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutTextView2"
        android:id="@+id/textViewAbout2"
        android:gravity="left"
        android:fontFamily="@string/fontFamily__roboto_black"
        android:paddingTop="20dp"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textViewAbout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutTextView3"
        android:id="@+id/textViewAbout3"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutTextView4"
        android:id="@+id/textViewAbout4"
        android:gravity="left"
        android:fontFamily="@string/fontFamily__roboto_black"
        android:layout_below="@+id/textViewAbout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goAboutButton1"
        android:text="@string/aboutButton1"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:fontFamily="@string/fontFamily__roboto_black"
        android:textSize="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>


