<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#F0F0E0">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignBottom="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UET Navigation App"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_marginBottom="110dp"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="@string/fontFamily__roboto_condensed_light"
        android:layout_above="@+id/goButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goButton"
        android:text="@string/goButton"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="54dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/fontFamily__roboto_black"
        android:textSize="24dp" />


</RelativeLayout>

