<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationActivity" >

    <fragment
    	android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_above="@+id/threeButtonsLayout" />




    <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/searchedPlace"
        android:hint="@string/searchBoxHint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

    </AutoCompleteTextView>
    <Button
        android:id="@+id/bzoomin"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:textSize="28sp"
        android:text="+"
        android:layout_above="@+id/bzoomout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/bzoomout"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:textSize="23sp"
        android:text="—"
        android:layout_above="@+id/threeButtonsLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />




        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/searchedPlace"
            android:id="@+id/threeButtonsLayout"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/bNavigation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/navigationButton"
                android:layout_above="@+id/searchedPlace"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/searchButton"
                android:id="@+id/searchButton"
                android:layout_above="@+id/searchedPlace"
                android:layout_centerHorizontal="true" />

        </LinearLayout>




</RelativeLayout>
